--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,11 @@
   "manifest_version": 2,
   "name": "Trump Filter",
   "version": "1.0",
-  "description": "Remove Donald Trump from the Internet.",
+  "description": "Remove Kardashian from the Internet.",
   "page_action" :
   {
     "default_icon" : "images/icon-19x19.png",
-    "default_title" : "Warning: Trump is on this page!"
+    "default_title" : "Warning: Kardashian is on this page!"
   },
   "permissions": [
     "tabs",
